# selfie-v4

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  TILT.md  TODO.md  Tiltfile  codemcp.toml  docker-compose.yml  dprint.jsonc  repomix.config.json
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  config.rs  event_processor.rs  formatters.rs  main.rs  tables.rs  terminal_progress_reporter.rs
crates/cli/src/commands/: config.rs  package.rs
crates/cli/src/commands/package/: check.rs  common.rs  create.rs  edit.rs  info.rs  install.rs  list.rs  remove.rs  validate.rs
crates/cli/tests/: cli_tests.rs  common.rs  config_validate_tests.rs  error_handling_integration_tests.rs  package_install_tests.rs  package_list_tests.rs
crates/libselfie/: Cargo.toml
crates/selfie/: Cargo.toml
crates/selfie/src/: adapters.rs  command_runner.rs  commands.rs  config.rs  filesystem.rs  fs.rs  lib.rs  package.rs  progress_reporter.rs  validation.rs
crates/selfie/src/adapters/: config_loader.rs  filesystem.rs
crates/selfie/src/adapters/command_runner/: shell.rs
crates/selfie/src/adapters/config_loader/: yaml.rs
crates/selfie/src/command/: runner.rs
crates/selfie/src/command/runner/: shell.rs
crates/selfie/src/commands/: runner.rs  shell.rs  tests.rs
crates/selfie/src/config/: loader.rs  ports.rs  validate.rs  yaml.rs
crates/selfie/src/config/loader/: yaml.rs
crates/selfie/src/domain/: config.rs
crates/selfie/src/filesystem/: adapter.rs  real.rs
crates/selfie/src/fs/: filesystem.rs  real.rs
crates/selfie/src/package/: builder.rs  event.rs  port.rs  repository.rs  service.rs  tests.rs  validate.rs
crates/selfie/src/package/event/: error.rs  metadata.rs
crates/selfie/src/package/repository/: yaml.rs
crates/selfie/src/package/service/: check.rs  info.rs  install.rs  list.rs  steps.rs  validate.rs
crates/selfie/src/ports/: command_runner.rs  config_loader.rs  filesystem.rs
crates/selfie/src/progress_reporter/: port.rs  terminal.rs
crates/selfie/tests/: command_execution_tests.rs  package_repository_tests.rs  package_service_tests.rs  package_validation_tests.rs  progress_reporter_tests.rs
crates/test-common/: Cargo.toml
crates/test-common/src/: config.rs  constants.rs  events.rs  fixtures.rs  lib.rs  package.rs  service.rs
docker/alpine/: Dockerfile
docker/debian/: Dockerfile
docs/: test-stabilization.md
justfiles/: docker.just  tilt.just
test-packages/: curl.yml  git.yml
