[package]
name = "selfie-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
console.workspace = true
selfie = { path = "../selfie/" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
selfie = { path = "../selfie/", features = ["with_mocks"] }
tempfile.workspace = true
