[package]
name = "selfie-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
comfy-table = { version = "7.1.4", features = ["custom_styling"] }
console.workspace = true
dialoguer = "0.11"
futures.workspace = true
selfie = { path = "../selfie/" }
serde_yaml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
selfie = { path = "../selfie/", features = ["with_mocks"] }
serde_yaml.workspace = true
tempfile.workspace = true
test-common = { path = "../test-common/" }
tokio-test = "0.4"
