[package]
name = "selfie"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
config = { version = "0.15.9", features = ["yaml"] }
console.workspace = true
etcetera = "0.10.0"
futures = "0.3.31"
mockall = { version = "0.13.1", optional = true }
num_cpus = "1.16.0"
pretty_assertions = "1.4.1"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml.workspace = true
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.44", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
  "time",
] }
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.17"
tokio = { version = "1.44", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["user"] }

[features]
default = []
with_mocks = ["mockall"]
